--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">JarusTest</string>
     <string name="choose_equipment">Choose Equipment</string>
     <string name="expand_collapse">Expand/Collapse</string>
+    <string name="vin">VIN</string>
+    <string name="year">Year</string>
+    <string name="make">Make</string>
+    <string name="value">Value</string>
+    <string name="length">Length</string>
+    <string name="select_un_select">Select/Un-Select</string>
+    <string name="something">Something went wrong, Please try later</string>
+    <string name="retry">Retry</string>
+    <string name="file_name">assignment.json</string>
+    <string name="format_name">UTF-8</string>
+    <string name="no_data_found">No Data Found</string>
 </resources>
